Adding more code

--- a/index.html
+++ b/index.html
@@ -12,5 +12,8 @@
     </p>
     <h3>Talking from the second branch</h3>
     <p>We love our bangladesh</p>
+    <p>Added more code in the second branch</p>
+
+    <p>Added more code with in the second branch</p>
 </body>
 </html>
