--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <h1>My name munna.I'm a student</h1>
     <p>amr sona bangla ami tomy vlobashi
     </p>
-    <h3>Talking from the second updated in main branch</h3>
-    <p>We love our bangladesh.</p>
+    <h3>Talking from the second updated in  branch</h3>
+    <p>We love our bangladesh. updated again</p>
     <p>Added more code in the second branch</p>
 
     <p>Added more code with in the second branch</p>
