--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>My name munna.I'm a student</h1>
     <p>amr sona bangla ami tomy vlobashi
     </p>
-    <h3>Talking from the second branch</h3>
+    <h3>Talking from the updated on the second branch branch</h3>
     <p>We love our bangladesh</p>
     <p>Added more code in the second branch</p>
 
